--- a/index.html
+++ b/index.html
@@ -5,14 +5,23 @@
     <title>timers</title>
     <style type="text/css">
     canvas {
-        background-color: #ccc;
-    }
+        background-color: rgb(100, 100, 100);
+        }
+        body{
+            background-color: rgb(100, 100, 100);
+        }
+            
+        h3{
+            text-align: center;
+            margin-bottom: 20px;
+        }
+        
     </style>
 </head>
 
 <body>
     <h3>Set Interval</h3>
-    <canvas id="setInterval" width="800" height="100"></canvas>
+    <canvas id="setInterval" width="" height="100"></canvas>
     <h3>Set Timeout</h3>
     <canvas id="setTimeout" width="800" height="100"></canvas>
     <h3>Request Animation Frame</h3>
